syntax = "proto3";

package awakari.resolver;

option go_package = "api/grpc/resolver";

import "api/grpc/cloudevents/cloudevent.proto";

service Service {
  rpc SubmitMessages(stream SubmitMessagesRequest) returns (stream SubmitMessagesResponse);
}

message SubmitMessagesRequest {
  repeated pb.CloudEvent msgs = 1;
}

message SubmitMessagesResponse {
  uint32 ackCount = 1;
}
